add first version but it is to slow

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,11 @@
         "ranges": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "bitset": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "regex": "cpp",
+        "sstream": "cpp"
     }
 }
